--- a/resources/css/codedayspa.css
+++ b/resources/css/codedayspa.css
@@ -3,9 +3,8 @@ body { padding-top: 75px; padding-bottom: 40px; }
 /*
  * Margin and padding styles
  */
-.margin-right-25 { margin-right: 25px; }
-.margin-right-50 { margin-right: 50px; }
 .margin-left-25 { margin-left: 25px; }
+.margin-bottom-25 { margin-bottom: 25px; }
 
 .inner-blur-shadow {
 	-moz-box-shadow:  0 0 15px #888;
